public class Bike : Vehicle
{
    public Bike(string number)
    {
        this.Number = number;
        this.Type = VehicleType.BIKE;
    }
}