public class Car : Vehicle
{
    public Car(string number)
    {
        this.Number = number;
        this.Type = VehicleType.CAR;
    }
}