public enum PaymentMode
{
    CARD,
    UPI,
    CASH
}