public class Truck : Vehicle
{
    public Truck(string number)
    {
        this.Number = number;
        this.Type = VehicleType.TRUCK;
    }
}