public abstract class Vehicle
{
    //Each vehicle has Type and a number
    public VehicleType Type { get; set; }
    public string Number { get; set; } = string.Empty;
}